<resources>
    <string name="app_name">PotatOs</string>
    <string name="the_quiz_app">The Quiz App</string>
    <string name="logIn">Log In</string>
    <string name="createAc">Create Account</string>
    <string name="password">Password</string>
    <string name="username">Email Address</string>
    <string name="enterNameofQuiz">Enter Name of Quiz</string>
    <string name="enterPassword">Enter Password</string>
    <string name="enterTextofQuestion">Enter Text of Question</string>
    <string name="background">Background</string>
    <string name="secondAnswer">Enter second answer</string>
    <string name="firstAnswer">Enter first answer</string>
    <string name="thirdAnswer">Enter third answer</string>
    <string name="fourthAnswer">Enter fourth answer</string>
    <string name="className">ClassName</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="enterUsername">Enter Username</string>
    <string name="enterEmail">Enter email address</string>
    <string name="numQuiz">#Quizzes</string>
    <string name="numOpenQuiz">#OpenQuizzes</string>
    <string name="numStudent">#Students</string>
    <string name="emptyString" />
    <string name="emptyString1" />
    <string name="emptyString2" />
    <string name="emptyString3" />
    <string name="emptyString6" />
    <string name="emptyString4" />
    <string name="emptyString5" />
    <string name="returnQuiz">Return to Quiz</string>
    <string name="log_out">Log Out</string>
    <string name="joinClass">Join Class</string>
    <string name="settings">Settings</string>
    <string name="quizname">QuizName</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="next_question">Next Question</string>
    <string name="previous_question">Previous Question</string>
    <string name="register">Register</string>
    <string name="create_new_class">Create New Class</string>
    <string name="enter_class_code">Enter Class Code</string>
    <string name="enter_class_name">Enter Class Name</string>
    <string name="answer_b">Answer B</string>
    <string name="answer_c">Answer C</string>
    <string name="answer_d">Answer D</string>
    <string name="question_prompt">Question Prompt</string>
    <string name="answer_a_feedback">Answer A Feedback</string>
    <string name="answer_b_feedback">Answer B Feedback</string>
    <string name="answer_c_feedback">Answer C Feedback</string>
    <string name="answer_d_feedback">Answer D Feedback</string>
    <string name="answer_a">Answer A</string>
    <string name="save_question">Save Question</string>
</resources>
