<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/TFfirstAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/firstAnswer"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/TFsecondAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/secondAnswer"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/TFthirdAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/thirdAnswer"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/TFfourthAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/fourthAnswer"
        android:inputType="textPersonName" />
</LinearLayout>
