<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Question goes here" />

    <TextView
        android:id="@+id/answerTextViewA"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/radio_group_selection"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView"
        tools:text="Answer A" />

    <TextView
        android:id="@+id/answerTextViewB"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/radio_group_selection"
        app:layout_constraintTop_toBottomOf="@+id/answerTextViewA"
        tools:text="Answer B" />

    <TextView
        android:id="@+id/answerTextViewC"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/radio_group_selection"
        app:layout_constraintTop_toBottomOf="@+id/answerTextViewB"
        tools:text="Answer C" />

    <TextView
        android:id="@+id/answerTextViewD"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/radio_group_selection"
        app:layout_constraintTop_toBottomOf="@+id/answerTextViewC"
        tools:text="Answer D" />

    <RadioGroup
        android:id="@+id/radio_group_selection"
        android:layout_width="55dp"
        android:layout_height="280dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/questionTextView"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView">

        <RadioButton
            android:id="@+id/radioBtnA"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_marginBottom="8dp"
            android:text="@string/a" />

        <RadioButton
            android:id="@+id/radioBtnB"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_marginBottom="8dp"
            android:text="@string/b" />

        <RadioButton
            android:id="@+id/radioBtnC"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_marginBottom="8dp"
            android:text="@string/c" />

        <RadioButton
            android:id="@+id/radioBtnD"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_marginBottom="8dp"
            android:text="@string/d" />

    </RadioGroup>

    <Button
        android:id="@+id/nextQuestion"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/next_question"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/prevQuestion"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/previous_question"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>